
name:               music-sibelius
version:            1.6
cabal-version:      >= 1.10
author:             Hans Hoglund
maintainer:         Hans Hoglund <hans@hanshoglund.se>
license:            BSD3
license-file:       COPYING
synopsis:           To be written.
category:           Music
tested-with:        GHC
build-type:         Simple

description: 
    Import music from Sibelius (experimental).
    
    This library is part of the Music Suite, see <http://music-suite.github.io>.

source-repository head
  type:             git
  location:         git://github.com/music-suite/music-sibelius.git
  
library                    
    build-depends: 
        base                     >= 4 && < 5,
        semigroups,
        monadplus,
        unordered-containers,
        bytestring,
        music-score              == 1.6,
        music-pitch-literal      == 1.6,
        music-preludes           == 1.6,
        aeson
    hs-source-dirs: src
    default-language: Haskell2010
    exposed-modules:
        Music.Sibelius
        Music.Score.Import.Sibelius

