
name:                   music-suite
version:                2.0.0
author:                 Hans Hoglund
maintainer:             Hans Hoglund <info@hanshoglund.com>
license:                BSD3
license-file:           COPYING
synopsis:               A set of libraries for composition, analysis and manipulation of music.
category:               Music
tested-with:            GHC
build-type:             Simple
cabal-version:          >= 1.10

description:
    See <http://music-suite.github.io>.

extra-source-files:     README.md,
                        examples/*.hs,
                        examples/*.scm

source-repository head
    type:             	git
    location:         	git://github.com/music-suite/music-suite.git

library
    build-depends:      base,
                        lens,
                        text,
                        split,
                        containers,
                        comonad,
                        streams,
                        vector-space,
                        vector-space-points,
                        process,
                        filepath,
                        optparse-applicative,
                        average,
                        semigroups,
                        monadplus,
                        transformers,
                        unordered-containers,
                        base-orphans,
                        data-default,
                        file-embed,
                        aeson,
                        roman-numerals,
                        bytestring,
                        cassava,
                        mtl,
                        contravariant,
                        base-prelude,
                        NumInstances,
                        MonadRandom,
                        colour,
                        logict,
                        parsec,
                        directory,
                        prettify,
                        HCodecs,
                        data-interval,
                        positive,
                        type-unary,
                        xml,
                        random,
                        neat-interpolation,
                        modular-arithmetic,
                        random-shuffle
    if !os(windows)
      build-depends:    unix

    exposed-modules:    Music.Articulation
                        Music.Dynamics
                        Music.Dynamics.Absolute
                        Music.Dynamics.Common
                        Music.Dynamics.Balance
                        Music.Dynamics.Literal
                        Data.Semigroup.Option.Instances
                        Music.Parts
                        Music.Parts.Division
                        Music.Parts.Subpart
                        Music.Parts.Solo
                        Music.Parts.Part
                        Music.Parts.Group
                        Music.Parts.Instrument
                        Music.Parts.Instrument.Strings
                        Music.Parts.Instrument.Woodwind
                        Music.Parts.Instrument.Brass
                        Music.Parts.Instrument.Percussion
                        Music.Parts.Instrument.Keyboard
                        Music.Parts.Instrument.Vocal
                        Music.Parts.Internal.Data
                        Music.Pitch.Absolute
                        Data.Music.Lilypond
                        Data.Music.Lilypond.Dynamics
                        Data.Music.Lilypond.Pitch
                        Data.Music.Lilypond.Value
                        Data.Music.MusicXml
                        Data.Music.MusicXml.Dynamics
                        Data.Music.MusicXml.Pitch
                        Data.Music.MusicXml.Read
                        Data.Music.MusicXml.Score
                        Data.Music.MusicXml.Simple
                        Data.Music.MusicXml.Time
                        Data.Music.MusicXml.Write
                        Data.Music.MusicXml.Write.Score
                        Music.Pitch
                        Music.Pitch.Equal
                        Music.Pitch.Common
                        Music.Pitch.Common.Types
                        Music.Pitch.Common.Internal
                        Music.Pitch.Common.Quality
                        Music.Pitch.Common.Number
                        Music.Pitch.Common.Interval
                        Music.Pitch.Common.Pitch
                        Music.Pitch.Common.Semitones
                        Music.Pitch.Common.Spell
                        Music.Pitch.Common.Harmony
                        Music.Pitch.Common.Names
                        Music.Pitch.Ambitus
                        Music.Pitch.Scale
                        Music.Pitch.Clef
                        Music.Pitch.Intonation
                        Music.Pitch.Literal
                        Music.Pitch.Literal.Pitch
                        Music.Pitch.Literal.Interval
                        Music.Pitch.Augmentable
                        Music.Pitch.Alterable
                        Data.AffineSpace.Point.Offsets
                        Data.Functor.Couple
                        Data.Functor.Context
                        Data.Functor.Rep.Lens
                        Data.Semigroup.Instances
                        Control.Monad.Compose
                        Music.Time
                        Music.Time.Types
                        Music.Time.Transform
                        Music.Time.Duration
                        Music.Time.Position
                        Music.Time.Split
                        Music.Time.Reverse
                        Music.Time.Juxtapose
                        Music.Time.Rest
                        Music.Time.Aligned
                        Music.Time.Note
                        Music.Time.Placed
                        Music.Time.Event
                        Music.Time.Track
                        Music.Time.Voice
                        Music.Time.Score
                        Music.Time.Pattern
                        Music.Time.Behavior
                        Music.Time.Reactive
                        Music.Time.Meta
                        Music.Score
                        Music.Score.Ties
                        Music.Score.Part
                        Music.Score.Phrases
                        Music.Score.Meta
                        Music.Score.Meta.Annotations
                        Music.Score.Meta.Attribution
                        Music.Score.Meta.Barline
                        Music.Score.Meta.Clef
                        Music.Score.Meta.Fermata
                        Music.Score.Meta.Key
                        Music.Score.Meta.RehearsalMark
                        Music.Score.Meta.Tempo
                        Music.Score.Meta.Time
                        Music.Score.Meta.Title
                        Music.Score.Export.Meta
                        Music.Score.Pitch
                        Music.Score.Articulation
                        Music.Score.Dynamics
                        Music.Score.Technique
                        Music.Score.Slide
                        Music.Score.Tremolo
                        Music.Score.StaffNumber
                        Music.Score.Text
                        Music.Score.Harmonics
                        Music.Score.Color
                        Music.Score.Export.ArticulationNotation
                        Music.Score.Export.TechniqueNotation
                        Music.Score.Export.DynamicNotation
                        Music.Score.Export.StandardNotation
                        Music.Score.Import.Abc
                        Music.Score.Import.Lilypond
                        Music.Score.Import.Midi
                        Music.Time.Internal.Convert
                        Music.Time.Internal.Util
                        Music.Time.Internal.Transform
                        Music.Score.Internal.Quantize
                        Music.Score.Internal.VoiceSeparation
                        Music.Score.Internal.Instances
                        Music.Score.Internal.Util
                        Music.Score.Internal.Export
                        Music.Time.Internal.Preliminaries
                        Music.Pitch.Tokawa
                        Data.Music.Sibelius
                        Music.Score.Import.Sibelius
                        Music.Prelude
                        Music.Prelude.Standard
                        Music.Prelude.Inspectable
    hs-source-dirs:     src
    default-language:   Haskell2010
    default-extensions: ConstraintKinds,
                        DeriveDataTypeable,
                        DeriveFoldable,
                        DeriveFunctor,
                        DeriveTraversable,
                        GeneralizedNewtypeDeriving,
                        MultiParamTypeClasses,
                        NoMonomorphismRestriction,
                        RankNTypes,
                        StandaloneDeriving,
                        TupleSections,
                        TypeFamilies,
                        TypeOperators,
                        TypeApplications,
                        ViewPatterns,
                        OverloadedStrings
  ghc-options:
    -Wall
    -Wcompat
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wredundant-constraints
    -Wno-unused-top-binds
    -Wno-name-shadowing
    -- TODO: -Werror

test-suite "music-suite-test-umts"
    build-depends:      base,
                        aeson,
                        average,
                        base-orphans,
                        base-prelude,
                        bytestring,
                        cassava,
                        colour,
                        comonad,
                        containers,
                        contravariant,
                        data-default,
                        data-interval,
                        directory,
                        file-embed,
                        filepath,
                        HCodecs,
                        lens,
                        logict,
                        modular-arithmetic,
                        monadplus,
                        MonadRandom,
                        mtl,
                        neat-interpolation,
                        NumInstances,
                        optparse-applicative,
                        parsec,
                        positive,
                        prettify,
                        process,
                        QuickCheck,
                        random,
                        roman-numerals,
                        semigroups,
                        split,
                        streams,
                        tasty,
                        tasty-golden,
                        tasty-quickcheck,
                        text,
                        transformers,
                        type-unary,
                        unordered-containers,
                        vector-space,
                        vector-space-points,
                        xml,
                        music-suite
    main-is:            UMTS.hs
    type:               exitcode-stdio-1.0
    hs-source-dirs:     test
    default-language:   Haskell2010

test-suite "music-suite-test-laws"
    build-depends:      base,
                        tasty,
                        tasty-golden,
                        process,
                        average,
                        containers,
                        tasty-quickcheck,
                        QuickCheck,
                        semigroups,
                        comonad,
                        music-suite
    type:               exitcode-stdio-1.0
    main-is:            Laws.hs
    hs-source-dirs:     test
    default-language:   Haskell2010

-- Examples:

executable "music-suite-examples-analysis"
    build-depends:      base,
                        lens,
                        music-suite
    hs-source-dirs:     examples
    main-is:            analysis.hs

executable "music-suite-examples-analysis_durations"
    build-depends:      base,
                        lens,
                        music-suite
    hs-source-dirs:     examples
    main-is:            analysis_durations.hs

executable "music-suite-examples-annotations"
    build-depends:      base,
                        lens,
                        music-suite
    hs-source-dirs:     examples
    main-is:            annotations.hs

executable "music-suite-examples-bartok"
    build-depends:      base,
                        lens,
                        music-suite
    hs-source-dirs:     examples
    main-is:            bartok.hs

executable "music-suite-examples-behavior"
    build-depends:      base,
                        lens,
                        music-suite
    hs-source-dirs:     examples
    main-is:            behavior.hs

executable "music-suite-examples-canon"
    build-depends:      base,
                        lens,
                        music-suite
    hs-source-dirs:     examples
    main-is:            canon.hs

executable "music-suite-examples-chopin"
    build-depends:      base,
                        lens,
                        music-suite
    hs-source-dirs:     examples
    main-is:            chopin.hs

executable "music-suite-examples-duo"
    build-depends:      base,
                        lens,
                        music-suite
    hs-source-dirs:     examples
    main-is:            duo.hs

-- executable "music-suite-examples-dynamics"
--     build-depends:      base,
--                         lens,
--                         music-suite
--     hs-source-dirs:     examples
--     main-is:            dynamics.hs

executable "music-suite-examples-chords"
    build-depends:      base,
                        lens,
                        music-suite
    hs-source-dirs:     examples
    main-is:            chords.hs

executable "music-suite-examples-fugue1"
    build-depends:      base,
                        lens,
                        music-suite
    hs-source-dirs:     examples
    main-is:            fugue1.hs

executable "music-suite-examples-mozart"
    build-depends:      base,
                        music-suite
    hs-source-dirs:     examples
    main-is:            mozart.hs

executable "music-suite-examples-part"
    build-depends:      base,
                        music-suite
    hs-source-dirs:     examples
    main-is:            part.hs

executable "music-suite-examples-phrases"
    build-depends:      base,
                        lens,
                        music-suite
    hs-source-dirs:     examples
    main-is:            phrases.hs

executable "music-suite-examples-hello"
    build-depends:      base,
                        music-suite
    hs-source-dirs:     examples
    main-is:            hello.hs

executable "music-suite-examples-study-for-harp"
    build-depends:      base,
                        lens,
                        music-suite
    hs-source-dirs:     examples
    main-is:            StudyForHarp.hs

executable "music-suite-examples-time-signatures"
    build-depends:      base,
                        lens,
                        music-suite
    hs-source-dirs:     examples
    main-is:            TimeSignatures.hs

executable "music-suite-examples-trio"
    build-depends:      base,
                        lens,
                        music-suite
    hs-source-dirs:     examples
    main-is:            trio.hs

executable "music-suite-examples-tuplet"
    build-depends:      base,
                        lens,
                        music-suite
    hs-source-dirs:     examples
    main-is:            tuplet.hs

executable "music-suite-examples-klangfarben"
    build-depends:      base,
                        lens,
                        music-suite
    hs-source-dirs:     examples
    main-is:            klangfarben.hs

executable "music-suite-examples-chorale"
    build-depends:      base,
                        lens,
                        music-suite
    hs-source-dirs:     examples
    main-is:            chorale.hs

-- executable "music-suite-examples-piece1"
--     build-depends:      base,
--                         lens,
--                         music-suite
--     hs-source-dirs:     examples/pieces
--     main-is:            Piece1.hs

executable "music-suite-examples-piece3"
    build-depends:      base,
                        lens,
                        music-suite
    hs-source-dirs:     examples/pieces
    main-is:            Piece3.hs

executable "music-suite-examples-winds-phrasing"
    build-depends:      base,
                        lens,
                        music-suite
    hs-source-dirs:     examples/pieces/WindsPhrasing
    main-is:            Score.hs

executable "music-suite-examples-sustain-punctuated"
    build-depends:      base,
                        lens,
                        music-suite
    hs-source-dirs:     examples/pieces/SustainPunctuated
    main-is:            Score.hs

executable "music-suite-examples-piece8"
    build-depends:      base,
                        lens,
                        containers,
                        vector-space,
                        music-suite
    hs-source-dirs:     examples/pieces
    main-is:            Piece8.hs

-- executable "music-suite-examples-ambitus"
--     build-depends:      base,
--                         lens,
--                         music-suite
--     hs-source-dirs:     examples/pieces/Ambitus
--     main-is:            Score.hs

executable "music-suite-examples-brass-large-ensemble"
    build-depends:      base,
                        lens,
                        containers,
                        random,
                        music-suite
    hs-source-dirs:     examples/pieces/BrassLargeEnsemble
    main-is:            Score.hs

executable "music-suite-examples-salient-melodic-transformations"
    build-depends:      base,
                        lens,
                        containers,
                        random,
                        music-suite
    hs-source-dirs:     examples/pieces/SalientMelodicTransformations
    main-is:            Score.hs

-- TODO CrawfordSeeger
-- TODO Floaters
-- TODO HarmonyToTexture
-- TODO HarmonyTriads
-- TODO HarmPhasing
-- TODO PianoChords
-- TODO PopRhythms
-- TODO SalientMelodicTransformations
-- TODO SustainPunctuated
